k8s/apps/openclaw/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gateway-ingress

spec:
  routes:
    - kind: Rule
      match: Host(`openclaw.starry.blue`)
      priority: 10
      services:
        - name: agent
          port: gateway
      middlewares:
        - name: forward-auth-authentik
          namespace: authentik

    - kind: Rule
      match: Host(`openclaw.starry.blue`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 15
      services:
        - name: authentik-server
          namespace: authentik
          port: http
